# src/apiDefinition.yaml
@@ -31,7 +31,7 @@ tags:
   description: "A bookmark is a website url you want to save for later"
 
 # API paths summary
-# /definition
+# /openapi
 # /binder
 # /binder/{binderUuid}
 # /folder
@@ -40,9 +40,9 @@ tags:
 # /bookmark/{bookmarkUuid}
 
 paths:
-  "/definition":
+  "/openapi":
     get:
-      operationId: definitionRead
+      operationId: openapiRead
       description: Read the OpenAPI schema.
       tags: 
           - "internal"
@@ -390,368 +390,6 @@ paths:
       description: Delete one binder.
       tags: 
         - "binder"
-      responses:
-        200:
-          description: OK
-          $ref: "#/components/responses/200"
-        400:
-          description: Bad Request
-          $ref: "#/components/responses/400"
-        401:
-          description: Unauthorized
-          $ref: "#/components/responses/401"
-        403:
-          description: Forbidden
-          $ref: "#/components/responses/403"
-        404:
-          description: Not Found
-          $ref: "#/components/responses/404"
-        405:
-          description: Method Not Allowed
-          $ref: "#/components/responses/405"
-        406:
-          description: Not Acceptable
-          $ref: "#/components/responses/406"
-        408:
-          description: Request Timeout
-          $ref: "#/components/responses/408"
-        409:
-          description: Conflict
-          $ref: "#/components/responses/409"
-        410:
-          description: Gone
-          $ref: "#/components/responses/410"
-        412:
-          description: Precondition Failed
-          $ref: "#/components/responses/412"
-        413:
-          description: Payload Too Large
-          $ref: "#/components/responses/413"
-        414:
-          description: URI Too Long
-          $ref: "#/components/responses/414"
-        422:
-          description: Unprocessable Content
-          $ref: "#/components/responses/422"
-        426:
-          description: Upgrade Required
-          $ref: "#/components/responses/426"
-        428:
-          description: Precondition Required
-          $ref: "#/components/responses/428"
-        429:
-          description: Too Many Requests
-          $ref: "#/components/responses/429"
-        431:
-          description: Request Header Fields Too Large
-          $ref: "#/components/responses/431"
-        500:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-        503:
-          description: Service Unavailable
-          $ref: "#/components/responses/503"
-        504:
-          description: Gateway Timeout
-          $ref: "#/components/responses/504"
-        default:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-  "/folder":
-    get:
-      operationId: folderRead
-      description: Read all the folders you have access to.
-      tags: 
-        - "folder"
-      responses:
-        200:
-          description: OK
-          $ref: "#/components/responses/200"
-        400:
-          description: Bad Request
-          $ref: "#/components/responses/400"
-        401:
-          description: Unauthorized
-          $ref: "#/components/responses/401"
-        403:
-          description: Forbidden
-          $ref: "#/components/responses/403"
-        404:
-          description: Not Found
-          $ref: "#/components/responses/404"
-        405:
-          description: Method Not Allowed
-          $ref: "#/components/responses/405"
-        406:
-          description: Not Acceptable
-          $ref: "#/components/responses/406"
-        408:
-          description: Request Timeout
-          $ref: "#/components/responses/408"
-        409:
-          description: Conflict
-          $ref: "#/components/responses/409"
-        410:
-          description: Gone
-          $ref: "#/components/responses/410"
-        412:
-          description: Precondition Failed
-          $ref: "#/components/responses/412"
-        413:
-          description: Payload Too Large
-          $ref: "#/components/responses/413"
-        414:
-          description: URI Too Long
-          $ref: "#/components/responses/414"
-        422:
-          description: Unprocessable Content
-          $ref: "#/components/responses/422"
-        426:
-          description: Upgrade Required
-          $ref: "#/components/responses/426"
-        428:
-          description: Precondition Required
-          $ref: "#/components/responses/428"
-        429:
-          description: Too Many Requests
-          $ref: "#/components/responses/429"
-        431:
-          description: Request Header Fields Too Large
-          $ref: "#/components/responses/431"
-        500:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-        503:
-          description: Service Unavailable
-          $ref: "#/components/responses/503"
-        504:
-          description: Gateway Timeout
-          $ref: "#/components/responses/504"
-        default:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-    post:
-      operationId: folderCreate
-      description: Create a new folder.
-      tags: 
-        - "folder"
-      responses:
-        200:
-          description: OK
-          $ref: "#/components/responses/200"
-        400:
-          description: Bad Request
-          $ref: "#/components/responses/400"
-        401:
-          description: Unauthorized
-          $ref: "#/components/responses/401"
-        403:
-          description: Forbidden
-          $ref: "#/components/responses/403"
-        404:
-          description: Not Found
-          $ref: "#/components/responses/404"
-        405:
-          description: Method Not Allowed
-          $ref: "#/components/responses/405"
-        406:
-          description: Not Acceptable
-          $ref: "#/components/responses/406"
-        408:
-          description: Request Timeout
-          $ref: "#/components/responses/408"
-        409:
-          description: Conflict
-          $ref: "#/components/responses/409"
-        410:
-          description: Gone
-          $ref: "#/components/responses/410"
-        412:
-          description: Precondition Failed
-          $ref: "#/components/responses/412"
-        413:
-          description: Payload Too Large
-          $ref: "#/components/responses/413"
-        414:
-          description: URI Too Long
-          $ref: "#/components/responses/414"
-        422:
-          description: Unprocessable Content
-          $ref: "#/components/responses/422"
-        426:
-          description: Upgrade Required
-          $ref: "#/components/responses/426"
-        428:
-          description: Precondition Required
-          $ref: "#/components/responses/428"
-        429:
-          description: Too Many Requests
-          $ref: "#/components/responses/429"
-        431:
-          description: Request Header Fields Too Large
-          $ref: "#/components/responses/431"
-        500:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-        503:
-          description: Service Unavailable
-          $ref: "#/components/responses/503"
-        504:
-          description: Gateway Timeout
-          $ref: "#/components/responses/504"
-        default:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-  "/folder/{folderId}":
-    get:
-      operationId: folderReadById
-      description: Read one folder.
-      tags: 
-        - "folder"
-      responses:
-        200:
-          description: OK
-          $ref: "#/components/responses/200"
-        400:
-          description: Bad Request
-          $ref: "#/components/responses/400"
-        401:
-          description: Unauthorized
-          $ref: "#/components/responses/401"
-        403:
-          description: Forbidden
-          $ref: "#/components/responses/403"
-        404:
-          description: Not Found
-          $ref: "#/components/responses/404"
-        405:
-          description: Method Not Allowed
-          $ref: "#/components/responses/405"
-        406:
-          description: Not Acceptable
-          $ref: "#/components/responses/406"
-        408:
-          description: Request Timeout
-          $ref: "#/components/responses/408"
-        409:
-          description: Conflict
-          $ref: "#/components/responses/409"
-        410:
-          description: Gone
-          $ref: "#/components/responses/410"
-        412:
-          description: Precondition Failed
-          $ref: "#/components/responses/412"
-        413:
-          description: Payload Too Large
-          $ref: "#/components/responses/413"
-        414:
-          description: URI Too Long
-          $ref: "#/components/responses/414"
-        422:
-          description: Unprocessable Content
-          $ref: "#/components/responses/422"
-        426:
-          description: Upgrade Required
-          $ref: "#/components/responses/426"
-        428:
-          description: Precondition Required
-          $ref: "#/components/responses/428"
-        429:
-          description: Too Many Requests
-          $ref: "#/components/responses/429"
-        431:
-          description: Request Header Fields Too Large
-          $ref: "#/components/responses/431"
-        500:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-        503:
-          description: Service Unavailable
-          $ref: "#/components/responses/503"
-        504:
-          description: Gateway Timeout
-          $ref: "#/components/responses/504"
-        default:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-    patch:
-      operationId: folderUpdateById
-      description: Update one folder.
-      tags: 
-        - "folder"
-      responses:
-        200:
-          description: OK
-          $ref: "#/components/responses/200"
-        400:
-          description: Bad Request
-          $ref: "#/components/responses/400"
-        401:
-          description: Unauthorized
-          $ref: "#/components/responses/401"
-        403:
-          description: Forbidden
-          $ref: "#/components/responses/403"
-        404:
-          description: Not Found
-          $ref: "#/components/responses/404"
-        405:
-          description: Method Not Allowed
-          $ref: "#/components/responses/405"
-        406:
-          description: Not Acceptable
-          $ref: "#/components/responses/406"
-        408:
-          description: Request Timeout
-          $ref: "#/components/responses/408"
-        409:
-          description: Conflict
-          $ref: "#/components/responses/409"
-        410:
-          description: Gone
-          $ref: "#/components/responses/410"
-        412:
-          description: Precondition Failed
-          $ref: "#/components/responses/412"
-        413:
-          description: Payload Too Large
-          $ref: "#/components/responses/413"
-        414:
-          description: URI Too Long
-          $ref: "#/components/responses/414"
-        422:
-          description: Unprocessable Content
-          $ref: "#/components/responses/422"
-        426:
-          description: Upgrade Required
-          $ref: "#/components/responses/426"
-        428:
-          description: Precondition Required
-          $ref: "#/components/responses/428"
-        429:
-          description: Too Many Requests
-          $ref: "#/components/responses/429"
-        431:
-          description: Request Header Fields Too Large
-          $ref: "#/components/responses/431"
-        500:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-        503:
-          description: Service Unavailable
-          $ref: "#/components/responses/503"
-        504:
-          description: Gateway Timeout
-          $ref: "#/components/responses/504"
-        default:
-          description: Internal Server Error
-          $ref: "#/components/responses/500"
-    delete:
-      operationId: folderDeleteById
-      description: Delete one folder.
-      tags: 
-        - "folder"
       responses:
         200:
           description: OK
@@ -1204,24 +842,7 @@ components:
       description: Returns the information of the binder you deleted by id.
       $ref: '#/components/schemas/serverSuccessMessage'
 
-    # Folder success
-    serverSuccessReadAllFolder:
-      description: Returns all the folder you have access to.
-      $ref: '#/components/schemas/serverSuccessMessage'
-    serverSuccessReadFolder:
-      description: Returns the folder you requested by id.
-      $ref: '#/components/schemas/serverSuccessMessage'
-    serverSuccessCreateFolder:
-      description: Returns the folder you created with additionnal information.
-      $ref: '#/components/schemas/serverSuccessMessage'
-    serverSuccessUpdateFolder:
-      description: Returns the information of the folder you updated by id.
-      $ref: '#/components/schemas/serverSuccessMessage'
-    serverSuccessDeleteFolder:
-      description: Returns the information of the folder you deleted by id.
-      $ref: '#/components/schemas/serverSuccessMessage'
-
-    # Folder success
+    # Bookmark success
     serverSuccessReadAllBookmark:
       description: Returns all the bookmark you have access to.
       $ref: '#/components/schemas/serverSuccessMessage'
@@ -1357,11 +978,6 @@ components:
               - $ref: '#/components/schemas/serverSuccessReadBinder'
               - $ref: '#/components/schemas/serverSuccessUpdateBinder'
               - $ref: '#/components/schemas/serverSuccessDeleteBinder'
-              - $ref: '#/components/schemas/serverSuccessCreateFolder'
-              - $ref: '#/components/schemas/serverSuccessReadFolder'
-              - $ref: '#/components/schemas/serverSuccessReadAllFolder'
-              - $ref: '#/components/schemas/serverSuccessUpdateFolder'
-              - $ref: '#/components/schemas/serverSuccessDeleteFolder'
               - $ref: '#/components/schemas/serverSuccessCreateBookmark'
               - $ref: '#/components/schemas/serverSuccessReadBookmark'
               - $ref: '#/components/schemas/serverSuccessReadAllBookmark'
